--- a/qr/vakili/v.html
+++ b/qr/vakili/v.html
@@ -97,10 +97,10 @@
     <p>📍 آدرس: استان کردستان، شهر سقز، پاساژ الماس، طبقه همکف، پلاک ۱۰۱</p>
     <p>☎️ ۰۸۷۳۶۳۰۰۶۰۷</p>
     <div class="socials">
-      <a href="https://t.me/09377701008" target="_blank">
+      <a href="https://t.me/+989377701008" target="_blank">
         <img src="images/telegram.png" alt="تلگرام">
       </a>
-      <a href="https://wa.me/989184161888" target="_blank">
+      <a href="https://wa.me/+989184161888" target="_blank">
         <img src="images/whatsapp.png" alt="واتساپ">
       </a>
       <a href="#" target="_blank">
