--- a/qr/vakili/v.html
+++ b/qr/vakili/v.html
@@ -126,7 +126,7 @@
       <a href="https://wa.me/+989184161888" target="_blank">
         <img src="images/whatsapp.png" alt="واتساپ">
       </a>
-      <a href="#" target="_blank">
+      <a href="https://www.instagram.com/beautyvakili/" target="_blank">
         <img src="images/instagram.png" alt="اینستاگرام">
       </a>
     </div>
